# openlayer-svn

trunk/: CMakeLists.txt  INSTALL  Makefile  README  cbuild.c  default.cbd
trunk/Manual/: Bitmap.html  Blenders.html  Canvas.html  Collision.html  CrystalStyle.css  Settings.html  Shape.html  TextRenderer.html  index.html
trunk/Manual/Bitmap/: Blit.html  BlitDistorted.html  BlitRotated.html  BlitStretched.html  BlitTransformed.html  CopyFromScreen.html  Destroy.html  FastBlit.html  FinishFastBlitting.html  GetCollisionPoly.html  GetMemoryBitmap.html  GetPixel.html  GetPixelPacked.html  HasAlphaChannel.html  Height.html  IsValid.html  Load.html  LoadListOfBitmaps.html  Save.html  Select.html  SendToGPU.html  StartFastBlitting.html  TexturedQuad.html  UnloadFromGPU.html  UnloadToMemory.html  UseAutoDelete.html  Width.html
trunk/Manual/Blenders/: Pop.html  Push.html  Set.html
trunk/Manual/Canvas/: DisableClipping.html  Fill.html  GetClippingRegion.html  GetMemoryBitmap.html  Height.html  Pop.html  Push.html  Refresh.html  Save.html  SetClipping.html  SetPixelWriteMode.html  SetTo.html  Width.html
trunk/Manual/Circle/: DrawArc.html  DrawDisk.html  SetRadius.html
trunk/Manual/Collision/: GetNormal.html  GetPoint.html  GetSegment.html  IsCollision.html
trunk/Manual/Ellipse/: Circle.html  Draw.html  DrawArc.html  DrawDisk.html  DrawOutline.html  SetRadius.html
trunk/Manual/Line/: Collides.html  Draw.html  GetNormal.html
trunk/Manual/LineStrip/: Draw.html
trunk/Manual/Placement/: MoveBy.html  RotateBy.html  SetPosition.html  SetRotation.html  SetStretch.html
trunk/Manual/Point/: Draw.html
trunk/Manual/Poly/: Collides.html  Draw.html  DrawOutline.html  GetNumberOfVertices.html
trunk/Manual/Rect/: Draw.html  DrawOutline.html
trunk/Manual/Rgba/: Select.html
trunk/Manual/Settings/: MemoryBitmapsStored.html  RestoreOldProjection.html  SetAntialiasing.html  SetCircleAccuracy.html  SetCollisionPolyAccuracy.html  SetOrthographicProjection.html  SetTextureMapping.html  StoreMemoryBitmaps.html  TextureMappingUsed.html
trunk/Manual/Setup/: GetWindowHeight.html  GetWindowWidth.html
trunk/Manual/Shape/: Draw.html  DrawOutline.html  Ellipse.html  GetLineWidth.html  Line.html  MoveBy.html  Point.html  Poly.html  RecordDraw.html  Rect.html  RotateBy.html  SetLineWidth.html
trunk/Manual/TextRenderer/: Height.html  IsValid.html  Load.html  SendToGPU.html  UnloadFromGPU.html  UseAutoDelete.html  Width.html
trunk/Manual/Transforms/: PopPlacement.html  PushPlacement.html  SetPosition.html  SetRotation.html  SetStretch.html
trunk/demos/: CMakeLists.txt  Makefile
trunk/demos/collisiondemo/: main.cpp
trunk/demos/gamedemo/: Demo.cpp  Makefile
trunk/demos/gamedemo/Gfx/Blocks/: Thumbs.db
trunk/demos/gameloop/: Main.cpp  Makefile
trunk/demos/linestripdemo/: Main.cpp  Makefile
trunk/demos/linestripdemo/Gfx/: Thumbs.db
trunk/demos/renderbitmap/: Main.cpp  Makefile
trunk/demos/shapedemo/: Main.cpp
trunk/demos/textdemo/: Main.cpp  Makefile
trunk/include/: OpenLayer.hpp
trunk/include/OpenLayer/: Animation.hpp  Bitmap.hpp  Blenders.hpp  Canvas.hpp  Circle.hpp  Collisions.hpp  Declspec.hpp  Effects.hpp  FpsCounter.hpp  Framebuffer.hpp  GarbageCollector.hpp  General.hpp  GfxRend.hpp  GlDriver.hpp  Glyph.hpp  Includes.hpp  Internal.hpp  Line.hpp  LineStrip.hpp  LineStripRender.hpp  Matrix.hpp  Mouse.hpp  OlRectangle.hpp  PendingLoad.hpp  Placement.hpp  Point.hpp  Polygon.hpp  RawLineStrip.hpp  Rectangle.hpp  RenderModes.hpp  Rgba.hpp  Settings.hpp  Setup.hpp  Shape.hpp  Templates.hpp  TextRenderer.hpp  TextureInfo.hpp  TexturedPoly.hpp  TransformMatrix.hpp  Transforms.hpp  (+3 more)
trunk/src/: Animation.cpp  Bitmap.cpp  Blenders.cpp  Canvas.cpp  Circle.cpp  Collisions.cpp  Effects.cpp  FpsCounter.cpp  Framebuffer.cpp  GarbageCollector.cpp  General.cpp  GfxRend.cpp  GlDriver.cpp  Glyph.cpp  Internal.cpp  Line.cpp  LineStrip.cpp  Matrix.cpp  PendingLoad.cpp  Placement.cpp  Point.cpp  Polygon.cpp  Rectangle.cpp  RenderModes.cpp  Rgba.cpp  Settings.cpp  Setup.cpp  Shape.cpp  TextRenderer.cpp  TextureInfo.cpp  TexturedPoly.cpp  Transforms.cpp  regpng.c
trunk/utils/glyphkeeper/: CMakeLists.txt  authors.txt  changes.txt  gk-makefile-linux  gk-makefile-win32  license.txt  readme.txt
trunk/utils/glyphkeeper/include/: glyph.h
trunk/utils/glyphkeeper/src/: glyph.c  glyph_dimensions.c  glyph_face.c  glyph_global_vars.c  glyph_index.c  glyph_internal.h  glyph_main.c  glyph_rend.c  glyph_structs.h  glyph_to_allegro.c  glyph_to_allegro_aa.c  glyph_to_allegro_mono.c  glyph_to_opengl.c  glyph_to_sdl.c  glyph_to_text.c  glyph_utils.c
trunk/utils/loadpng/: CHANGES.txt  README.txt  THANKS.txt  loadpng.c  savepng.c
